[build-system]
requires = ["setuptools", "Cython", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "spmat"
version = "0.1.0"
description = "spmat: A collection of tools for special matrices"
readme = "README.md" 
requires-python = ">=3.10,<3.14"
license = "BSD-2-Clause"

authors = [
  { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
]

keywords = ["matrices", "linear-algebra", "sparse-matrices"]

dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]
dev  = ["pytest", "pytest-mock"]

[project.urls]
Homepage     = "https://github.com/ihmeuw-msca/spmat"
Repository   = "https://github.com/ihmeuw-msca/spmat"
Documentation = "https://github.com/ihmeuw-msca/spmat"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.cython]
language_level = 3
